<resources>
    <string name="app_name">chatter</string>
    <string name="slogan">海内存知己，天涯若比邻</string>
    <string name="enter_mainpage">进入首页</string>

    <string name="message">消息</string>
    <string name="contaces">联系人</string>
    <string name="dynamic">动态</string>

    <string name="add_friend_page">添加好友</string>
    <string name="chat_page">聊天</string>
    <string name="add_friend_verify_page">好友验证</string>
    <string name="login_page">登录</string>
    <string name="register_page">注册</string>
    <string name="find_pwd_page">找回密码</string>

    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="find_password">找回密码</string>

    <string name="login_fail">登录失败</string>
    <string name="can_not_empty">不能为空</string>

    <string name="setting">设置</string>
    <string name="night_mode">夜间</string>

    <string name="add_friend">添加好友</string>
    <string name="friend_account">添加账号</string>
    <string name="add">添加</string>
    <string name="add_friend_request">添加好友请求</string>
    <string name="accept_new_friend_request">对方通过了你的好友请求</string>
    <string name="new_friend">新的朋友</string>

    <string name="news_comming">新消息</string>

    <string name="send_music">发送音乐</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_failed">刷新失败</string>

    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="edit_user_info">编辑用户资料</string>
    <string name="user_profile_center">个人中心</string>

    <string name="image_select">图片选择</string>

    <string name="comfirm_to_logout">确认退出登录？</string>
    <string name="comfirm">确认</string>
    <string name="cancel">取消</string>

    <string name="click_once_more_to_exit">再按一次退出</string>

    <string name="file_not_exist">文件不存在</string>

    <string name="exit_the_account">退出登录</string>

    <string name="a_day_before">一天</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
