<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/common_margin"
    android:paddingRight="@dimen/common_margin"
    tools:context="com.example.liaohaicongsx.coc.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/ll_input_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/common_margin"
            android:gravity="center_vertical"
            android:text="@string/account"/>

        <EditText
            android:id="@+id/et_input_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_below="@id/ll_input_account"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/common_margin"
            android:gravity="center_vertical"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_below="@id/ll_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_stroke"
            android:text="@string/register"/>

        <Button
            android:id="@+id/btn_find_pwd"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_stroke"
            android:text="@string/find_password"/>

    </RelativeLayout>
</RelativeLayout>
