<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liaohaicongsx.coc.activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>


    <RadioGroup
        android:id="@+id/rg_tabs_select"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rbtn_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/rbtn_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/contaces"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/rbtn_dynamic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/dynamic"
            android:textColor="@color/black"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tabs_select"
        android:background="@color/app_gray_divider"
        />

</RelativeLayout>
